tests/functional/lang/eval-fail-mapAttrs-2.err.exp
error:
       … while evaluating the attribute 'foo'
         at /pwd/lang/eval-fail-mapAttrs-2.nix:1:24:
            1| builtins.mapAttrs "" { foo.bar = 1; }
             |                        ^
            2|

       error: attempt to call something which is not a function but a string: ""
